[package]
name = "github-exporter-arm64-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
prometheus-client = "0.20.0"
log = "0.4.17"
fern = "0.6.2"
anyhow = "1.0.70"
reqwest = "0.11.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.24", features = ["serde"] }
cached = "0.43.0"
lazy_static = "1.4.0"
futures = "0.3.28"
